Fixing boost to download from a proper url (https://github.com/facebook/react-native/pull/11511/files) Bumping version, adding StackOverflowError patch.

--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -192,6 +192,7 @@ task buildReactNdkLib(dependsOn: [prepareJSC, prepareBoost, prepareDoubleConvers
             'NDK_PROJECT_PATH=null',
             "NDK_APPLICATION_MK=$projectDir/src/main/jni/Application.mk",
             'NDK_OUT=' + temporaryDir,
+            'APP_ALLOW_MISSING_DEPS=true',
             "NDK_LIBS_OUT=$buildDir/react-ndk/all",
             "THIRD_PARTY_NDK_DIR=$buildDir/third-party-ndk",
             "REACT_COMMON_DIR=$projectDir/../ReactCommon",
