--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,8 @@ allprojects {
         maven {
             url "$androidSdk/extras/m2repository/"
         }
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
